fix(breadcrumb): fix icon breadcrumb icon not aligned (#1699)
* fix(breadcrumb): fix icon breadcrumb icon not aligned

* fix(breadcrumb): scope ::ng-deep within host

--- a/projects/ng-aquila/src/breadcrumb/breadcrumb-item.component.scss
+++ b/projects/ng-aquila/src/breadcrumb/breadcrumb-item.component.scss
@@ -30,6 +30,7 @@
 
 .nx-breadcrumb-item__text {
   cursor: pointer;
+  display: inline-flex;
 }
 
 :host.cdk-keyboard-focused .nx-breadcrumb-item__text {
